INF-996 #comment Cleanup properties files #time 5m
git-svn-id: file:///svnrepo/local-svn/INF/trunk/infinit.e-preinstall@3941 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/infinit.e-platform.prerequisites/SOURCES/infinit.e-platform.prerequisites/mnt/opt/infinit.e-install/config/infinite.configuration.properties.TEMPLATE
+++ b/infinit.e-platform.prerequisites/SOURCES/infinit.e-platform.prerequisites/mnt/opt/infinit.e-install/config/infinite.configuration.properties.TEMPLATE
@@ -56,6 +56,9 @@ db.server=
 db.port= 
 db.capacity=
 db.legacy_naming_version=V0S1
+
+################################################################################
+# UI inactivity timeout
 access.timeout=
 
 ################################################################################
