INF-996 #comment add db.cluster.subnet back to prop file #time 5m
git-svn-id: file:///svnrepo/local-svn/INF/trunk/infinit.e-preinstall@4117 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/infinit.e-platform.prerequisites/SOURCES/infinit.e-platform.prerequisites/mnt/opt/infinit.e-install/config/infinite.configuration.properties.TEMPLATE
+++ b/infinit.e-platform.prerequisites/SOURCES/infinit.e-platform.prerequisites/mnt/opt/infinit.e-install/config/infinite.configuration.properties.TEMPLATE
@@ -70,6 +70,9 @@ s3.gpg.passphrase=
 # (server/port should normally point to localhost:27017), where API nodes have a mongos
 db.server=localhost
 db.port= 27017
+# db.cluster.subnet - used for non-EC2 installations to help mongodb configurations
+# identify proper host ip addresses, e.g. 127.0.0.
+db.cluster.subnet=
 # The max number of documents to store (eg 10M). Docs will be dropped in order of age.
 # (Not currently supported):
 db.capacity=10000000
