--- a/infinit.e-platform.prerequisites/SOURCES/infinit.e-platform.prerequisites/mnt/opt/infinit.e-install/config/infinite.configuration.properties.TEMPLATE
+++ b/infinit.e-platform.prerequisites/SOURCES/infinit.e-platform.prerequisites/mnt/opt/infinit.e-install/config/infinite.configuration.properties.TEMPLATE
@@ -70,6 +70,8 @@ s3.gpg.passphrase=
 # (server/port should normally point to localhost:27017), where API nodes have a mongos
 db.server=localhost
 db.port= 27017
+# db.sharded - 0 = false and 1 = true
+db.sharded=0
 # db.cluster.subnet - used for non-EC2 installations to help mongodb configurations
 # identify proper host ip addresses, e.g. 127.0.0.
 db.cluster.subnet=
