INF-996 #comment add db.config.servers property #time 5m
git-svn-id: file:///svnrepo/local-svn/INF/trunk/infinit.e-preinstall@4126 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/infinit.e-platform.prerequisites/SOURCES/infinit.e-platform.prerequisites/mnt/opt/infinit.e-install/config/infinite.configuration.properties.TEMPLATE
+++ b/infinit.e-platform.prerequisites/SOURCES/infinit.e-platform.prerequisites/mnt/opt/infinit.e-install/config/infinite.configuration.properties.TEMPLATE
@@ -70,6 +70,8 @@ s3.gpg.passphrase=
 # (server/port should normally point to localhost:27017), where API nodes have a mongos
 db.server=localhost
 db.port= 27017
+# MongoDB config server or servers (must be 1 or 3 comma separated IPs), non-AWS installations
+db.config.servers=
 # db.sharded - 0 = false and 1 = true
 db.sharded=0
 # db.cluster.subnet - used for non-EC2 installations to help mongodb configurations
