--- a/infinit.e-platform.prerequisites/SOURCES/infinit.e-platform.prerequisites/mnt/opt/infinit.e-install/config/infinite.configuration.properties.TEMPLATE
+++ b/infinit.e-platform.prerequisites/SOURCES/infinit.e-platform.prerequisites/mnt/opt/infinit.e-install/config/infinite.configuration.properties.TEMPLATE
@@ -72,6 +72,7 @@ db.server=localhost
 db.port= 27017
 # MongoDB config server or servers (must be 1 or 3 comma separated IPs), non-AWS installations
 db.config.servers=
+db.replica.sets=
 # db.sharded - 0 = false and 1 = true
 db.sharded=0
 # db.cluster.subnet - used for non-EC2 installations to help mongodb configurations
