INF-966 #comment Commented out most of some odd workaround needed to get RPM to build on centos (one time), to make it work on ubuntu #time 20m
git-svn-id: file:///svnrepo/local-svn/INF/trunk/infinit.e-preinstall@4195 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/infinit.e-elasticsearch.rpm/build.xml
+++ b/infinit.e-elasticsearch.rpm/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:ivy="antlib:org.apache.ivy.ant" name="elasticsearch-0.17.9" default="rpm" basedir=".">
+<project xmlns:ivy="antlib:org.apache.ivy.ant" name="elasticsearch" default="rpm" basedir=".">
 	<!-- ================================= 
 		     Properties              
 	================================= -->
@@ -22,15 +22,6 @@
 					global="true"
 					defaultValue="${ant.project.name}_tmp"
 		/>
-	
-	<!-- Versioning: these are not set again if already set -->
-
-	<property name="bamboo.majorBuild" value="0"/>
-	<property name="bamboo.minorBuild" value="16"/>
-	<property name="bamboo.custom.svn.revision.number" value="2"/>
-	
-	<property name="infinite_version" value="${bamboo.majorBuild}.${bamboo.minorBuild}"/>
-	<property name="infinite_release" value="${bamboo.custom.svn.revision.number}"/>
 	
 	<!-- ================================= 
 		     target: clean              
