INF-996 #comment First attempt at building a yum repo #time 30m
git-svn-id: file:///svnrepo/local-svn/INF/trunk/infinit.e-preinstall@4198 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/infinit.e.preinstall-builder/build.xml
+++ b/infinit.e.preinstall-builder/build.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:ivy="antlib:org.apache.ivy.ant" name="infinit.e.preinstall" default="build">
+<project xmlns:ivy="antlib:org.apache.ivy.ant" name="infinit.e.preinstall" default="createrepo">
+
+	<!-- Versioning: these are not set again if already set -->
+	<property name="bamboo.majorBuild" value="localBuild"/>
+	<property name="bamboo.minorBuild" value="0"/>
+	<property name="bamboo.custom.svn.revision.number" value="0"/>
+	
+	<property name="infinite_version" value="${bamboo.majorBuild}.${bamboo.minorBuild}"/>
+	<property name="infinite_release" value="${bamboo.custom.svn.revision.number}"/>
 
 	<property name="infinit.e-prereqs.rpm.location" value="${basedir}/../infinit.e-platform.prerequisites"/>	
 	<property name="infinit.e-elasticsearch.rpm.location" value="${basedir}/../infinit.e-elasticsearch.rpm"/>	
 	<property name="infinit.e-hadoop.rpm.location" value="${basedir}/../infinit.e-hadoop-installer"/>	
 	
-	<target name="build" description="Run build for all sub projects">
+	<target name="clean" description="Generic clean">
+		<delete dir="repo"/>
+	</target>
+		
+	<target name="build" depends="clean" description="Run build for all sub projects">
 		<ant antfile="${infinit.e-prereqs.rpm.location}/build.xml">
 			<property name="basedir" value="${infinit.e-prereqs.rpm.location}"/>
 		</ant>
@@ -17,4 +29,17 @@
 		</ant>
 	</target>
 
+	<target name="createrepo" depends="build" description="Create yum repo for RPMs">
+		<mkdir dir="repo"/>
+		<copy todir="repo">
+			<fileset dir="${infinit.e-prereqs.rpm.location}/RPMS/noarch/" includes="*online*.rpm"/>
+			<fileset dir="${infinit.e-hadoop.rpm.location}/RPMS/noarch/" includes="*online*.rpm"/>
+			<fileset dir="${infinit.e-elasticsearch.rpm.location}/RPMS/noarch/" includes="*.rpm"/>
+		</copy>
+		<exec executable="createrepo">
+			<arg value="repo"/>
+		</exec>
+		<zip destfile="infinit.e-preinstall-repo-${infinite_version}-{infinite_release}.zip" baseddir="repo/createrepo"/>
+	</target>
+	
 </project>
