--- a/infinit.e.preinstall-builder/build.xml
+++ b/infinit.e.preinstall-builder/build.xml
@@ -39,7 +39,7 @@
 		<exec executable="createrepo">
 			<arg value="repo"/>
 		</exec>
-		<zip destfile="infinit.e-preinstall-repo-${infinite_version}-{infinite_release}.zip" baseddir="repo/createrepo"/>
+		<zip destfile="infinit.e-preinstall-repo-${infinite_version}-{infinite_release}.zip" basedir="repo/createrepo"/>
 	</target>
 	
 </project>
