INF-966 #comment Some more pre OSS tidy up
git-svn-id: file:///svnrepo/local-svn/INF/trunk/infinit.e-preinstall@4240 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/infinit.e.preinstall-builder/build.xml
+++ b/infinit.e.preinstall-builder/build.xml
@@ -39,6 +39,7 @@
 			<fileset dir="${infinit.e-prereqs.rpm.location}/RPMS/noarch/" includes="*online*.rpm"/>
 			<fileset dir="${infinit.e-hadoop.rpm.location}/RPMS/noarch/" includes="*online*.rpm"/>
 			<fileset dir="${infinit.e-elasticsearch.rpm.location}/RPMS/noarch/" includes="*.rpm"/>
+			<fileset dir="${infinit.e-raid-amazon.rpm.location}/RPMS/noarch/" includes="*.rpm"/>
 		</copy>
 		<exec executable="createrepo">
 			<arg value="repo"/>
