INF-996 #comment Don't bundle geo.bson.tar.gz into the online RPM, to keep its size sensible, pub as an artefact instead #time 15m
git-svn-id: file:///svnrepo/local-svn/INF/trunk/infinit.e-preinstall@4252 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/infinit.e-platform.prerequisites/build.xml
+++ b/infinit.e-platform.prerequisites/build.xml
@@ -112,8 +112,7 @@
 		<tar tarfile="${dir.src}/${ant.project.name}-online.tgz" 
 		       basedir="${dir.src}/${ant.project.name}" 
 			   compression="gzip"
-		       includes="**"
-		       excludes=".svn,geo.bson.tar.gz" 
+		       excludes="**/.svn, **/geo.bson.tar.gz" 
 		/>		
 		<copy file="${dir.specs}/${ant.project.name}.online.spec" tofile="${dir.specs}/${ant.project.name}.online_tmp.spec"/>
 		<replace file="${dir.specs}/${ant.project.name}.online_tmp.spec">
