INF-996 #comment Sigh reverted back again!
git-svn-id: file:///svnrepo/local-svn/INF/trunk/infinit.e-preinstall@4253 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/infinit.e-platform.prerequisites/build.xml
+++ b/infinit.e-platform.prerequisites/build.xml
@@ -112,7 +112,8 @@
 		<tar tarfile="${dir.src}/${ant.project.name}-online.tgz" 
 		       basedir="${dir.src}/${ant.project.name}" 
 			   compression="gzip"
-		       excludes="**/.svn, **/geo.bson.tar.gz" 
+		       includes="**"
+		       excludes=".svn" 
 		/>		
 		<copy file="${dir.specs}/${ant.project.name}.online.spec" tofile="${dir.specs}/${ant.project.name}.online_tmp.spec"/>
 		<replace file="${dir.specs}/${ant.project.name}.online_tmp.spec">
