INF-996 #comment Untested improvment/fix to import of geo: now handles http:// or s3cmd://, and only creates dump the first time #time 1h
git-svn-id: file:///svnrepo/local-svn/INF/trunk/infinit.e-preinstall@4254 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/infinit.e-platform.prerequisites/SOURCES/infinit.e-platform.prerequisites/mnt/opt/infinite-install/config/infinite.configuration.properties.TEMPLATE
+++ b/infinit.e-platform.prerequisites/SOURCES/infinit.e-platform.prerequisites/mnt/opt/infinite-install/config/infinite.configuration.properties.TEMPLATE
@@ -81,6 +81,14 @@ db.cluster.subnet=
 # The max number of documents to store (eg 10M). Docs will be dropped in order of age.
 # (Not currently supported):
 db.capacity=10000000
+# The location from which to fetch the geo.bson dump used for feature.geo
+# can start s3://, http:// or https://, else is assumed to be a file
+# (In offline mode it's always here:)
+#db.geo_archive=/opt/infinite-install/data/feature/geo.bson.tar.gz
+#Example online locations
+#db.geo_archive=http://www.ikanow.com/infinit.e-preinstall/geo.bson.tar.gz
+#db.geo_archive=s3://config.saas.infinite.ikanow.com/geo.bson.tar.gz
+db.geo_archive=
 
 ################################################################################
 # UI inactivity timeout (in seconds)
