INF-996 #comment Fixed typo
git-svn-id: file:///svnrepo/local-svn/INF/trunk/infinit.e-preinstall@4272 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/infinit.e.preinstall-builder/build.xml
+++ b/infinit.e.preinstall-builder/build.xml
@@ -44,7 +44,7 @@
 		<exec executable="createrepo">
 			<arg value="repo"/>
 		</exec>
-		<zip destfile="infinit.e-preinstall-repo-${infinite_version}-{infinite_release}.zip" basedir="repo"/>
+		<zip destfile="infinit.e-preinstall-repo-${infinite_version}-${infinite_release}.zip" basedir="repo"/>
 	</target>
 	
 </project>
