INF-1400 #comment Fixing some repo creation issues resulting from new build server platform
git-svn-id: file:///svnrepo/local-svn/INF/trunk/infinit.e-preinstall@5724 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/infinit.e.preinstall-builder/build.xml
+++ b/infinit.e.preinstall-builder/build.xml
@@ -42,6 +42,8 @@
 			<fileset dir="${infinit.e-raid-amazon.rpm.location}/RPMS/noarch/" includes="*.rpm"/>
 		</copy>
 		<exec executable="createrepo">
+			<arg value="-s"/>
+			<arg value="sha"/>
 			<arg value="repo"/>
 		</exec>
 		<zip destfile="infinit.e-preinstall-repo-${infinite_version}-${infinite_release}.zip" basedir="repo"/>
