--- a/infinit.e.preinstall-builder/build.xml
+++ b/infinit.e.preinstall-builder/build.xml
@@ -55,7 +55,7 @@
 	    <!--  OFFLINE -->
 		<mkdir dir="offlinerepo"/>
 		<copy todir="offlinerepo">
-			<fileset dir="${infinit.e-prereqs.rpm.location}/RPMS/noarch/" includes="offline"/>
+			<fileset dir="${infinit.e-prereqs.rpm.location}/RPMS/noarch/" includes="*offline*.rpm"/>
 			<fileset dir="${infinit.e-hadoop.rpm.location}/RPMS/noarch/" includes="*offline*.rpm"/>
 			<fileset dir="${infinit.e-elasticsearch.rpm.location}/RPMS/noarch/" includes="*.rpm"/>
 			<fileset dir="${infinit.e-install.rpm.location}/ARTIFACTS/" includes="*.sh"/>
