INF-1400 #comment Some install bundles for Scott, move from zip to tar #time 10m
git-svn-id: file:///svnrepo/local-svn/INF/trunk/infinit.e-preinstall@7032 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/infinit.e.preinstall-builder/build.xml
+++ b/infinit.e.preinstall-builder/build.xml
@@ -60,7 +60,7 @@
 			<fileset dir="${infinit.e-elasticsearch.rpm.location}/RPMS/noarch/" includes="*.rpm"/>
 			<fileset dir="${infinit.e-install.rpm.location}/ARTIFACTS/" includes="*.sh"/>
 		</copy>
-		<zip destfile="infinit.e-preinstall-bundle.zip" basedir="offlinerepo"/>			    
+		<tar destfile="infinit.e-preinstall-bundle.tar" basedir="offlinerepo"/>			    
 	</target>
 	
 </project>
