--- a/infinit.e.preinstall-builder/build.xml
+++ b/infinit.e.preinstall-builder/build.xml
@@ -60,7 +60,7 @@
 			<fileset dir="${infinit.e-elasticsearch.rpm.location}/RPMS/noarch/" includes="*.rpm"/>
 			<fileset dir="${infinit.e-install.rpm.location}/ARTIFACTS/" includes="*.sh"/>
 		</copy>
-		<tar destfile="infinit.e-preinstall-bundle.tar" basedir="offlinerepo"/>			    
+		<tar destfile="infinit.e-preinstall-offline-bundle.tar" basedir="offlinerepo"/>			    
 	</target>
 	
 </project>
