INF-1400 #comment Moved example config to offline install
git-svn-id: file:///svnrepo/local-svn/INF/trunk/infinit.e-preinstall@7957 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/infinit.e.preinstall-builder/build.xml
+++ b/infinit.e.preinstall-builder/build.xml
@@ -60,6 +60,10 @@
 			<fileset dir="${infinit.e-elasticsearch.rpm.location}/RPMS/noarch/" includes="*.rpm"/>
 			<fileset dir="${infinit.e-install.rpm.location}/ARTIFACTS/" includes="*.sh"/>
 		</copy>
+		<mkdir dir="offlinerepo/example_configurations"/>
+		<copy todir="offlinerepo/example_configurations">
+			<fileset dir="${infinit.e-install.rpm.location}/SOURCES/infinit.e-install/mnt/opt/infinite-install/example_configurations" includes="*"/>
+		</copy>
 		<tar destfile="infinit.e-preinstall-offline-bundle.tar" basedir="offlinerepo"/>			    
 	</target>
 	
